tests/bigint/invalid14.js
const invalid_neg_octal_legacy = -016432n; // error
